# routes/api.php
@@ -19,7 +19,7 @@ use App\Http\Controllers\CompteController;
 
 
 Route::group(['prefix' => 'v1'], function () {
-    Route::apiResource('/comptes', CompteController::class)->only(['index', 'store', 'show', 'update']);
+    Route::apiResource('/comptes', CompteController::class)->only(['index', 'store', 'show', 'update', 'destroy']);
     Route::get('comptes/non-archives', [CompteController::class, 'getComptesNotArchived'])
         ->name('comptes.non_archives');
     Route::post('comptes/{id}/bloquer', [CompteController::class, 'bloquer'])
